# SmartGrid

./: .gitignore  LICENSE  README.md  pyproject.toml
contracts/: EnergyMarket.sol  ScoreBillboard.sol
data/consumer/historicaldata/: house_1.csv  house_2.csv  house_3.csv  house_4.csv  house_5.csv
data/consumer/predictiondata/: house_1.csv  house_2.csv  house_3.csv  house_4.csv  house_5.csv
data/consumer/realdata/: house_1.csv  house_2.csv  house_3.csv  house_4.csv  house_5.csv
data/prosumer/historicaldata/: house_10.csv  house_11.csv  house_12.csv  house_13.csv  house_14.csv  house_15.csv  house_6.csv  house_7.csv  house_8.csv  house_9.csv
data/prosumer/predictiondata/: house_10.csv  house_11.csv  house_12.csv  house_13.csv  house_14.csv  house_15.csv  house_6.csv  house_7.csv  house_8.csv  house_9.csv
data/prosumer/realdata/: house_10.csv  house_11.csv  house_12.csv  house_13.csv  house_14.csv  house_15.csv  house_6.csv  house_7.csv  house_8.csv  house_9.csv
output/: EMoutput.csv  clearPrice.csv  scorebillboard.csv
src/: server.py  sg_config.py
src/Analysis/: plot1.py  plot2-1.py  plot2-2.py  plot3.py  plot4.py
src/Blockchain/: interact.py
src/DataBean/: data_bean.py
src/Endpoints/: AIAgent.py  NG.py  consumer.py  prosumer.py
src/EnergyMarketSimulation/: clearMarketCalculation.py  conversion.py  emSimulation.py  score.py
src/Model/: model.py  trainModel.py
src/SmDeployments/: compile.py  deploy.py  getOnChainInfo.py
