[project]
name = "SmartGrid"
version = "0.1.0"
description = "A protoype of a blockchain-based energy trading architecture for grid stability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "web3>=7.13.0",
  "eth-account>=0.11.3",
  "python-dotenv>=1.0.1",
  "py-solc-x>=2.0.3",
  "scikit-learn">=1.7.1",
  "tensorflow>=2.20.0",
  "transformers>=4.57.0",
  "pandas>=2.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

